<resources>
    <string name="about">App Info</string>
    <string name="app_name">Weather</string>
    <string name="blank"/>
    <string name="cancel">Cancel</string>
    <string name="celsius">Celsius</string>
    <string name="connection_error">No network connection.\nCheck your connection and try again.</string>
    <string name="dark_sky_powered_by">Powered by Dark Sky</string>
    <string name="default_error">Error fetching forecast, please try again.</string>
    <string name="degrees">%d&#176;</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="now">Now</string>
    <string name="permission_location_rationale">Let\'s get started by accessing your location!</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permissions_grant_action">Grant Permission</string>
    <string name="premium_upgrade">Unlock Premium</string>
    <string name="premium_upgrade_dec">Upgrade to premium to unlock premium features</string>
    <string name="saved_places">Saved Places</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="temp_units">Temperature units</string>
    <string name="today">Today</string>
    <string name="upgrade">Upgrade</string>
    <string name="pref_dark">Dark</string>
    <string name="pref_default">Set by Battery Saver</string>
    <string name="pref_light">Light</string>
    <string name="theme">Theme</string>
</resources>
