<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stateListAnimator="@animator/animator_raise">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/itemsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_marginTop="@dimen/spacing_large"
                android:textColor="@color/theme"
                android:fontFamily="@font/sans_bold"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingEnd="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:textSize="@dimen/text_size_medium"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/divider_line"/>

            <LinearLayout
                android:id="@+id/tempUnitsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/spacing_list"
                android:paddingTop="@dimen/spacing_list"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingEnd="@dimen/spacing_medium"
                android:background="?attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sans_regular"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="@dimen/text_size_body"
                    android:text="@string/temp_units"/>
                <TextView
                    android:id="@+id/tempUnitsValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sans_regular"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="@dimen/text_size_small"
                    tools:text="@string/celsius"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/divider_line"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>